tests/baselines/reference/exportNestedNamespaces2.errors.txt
tests/cases/conformance/salsa/first.js(2,9): error TS2339: Property 'formatters' does not exist on type 'typeof import("tests/cases/conformance/salsa/first")'.
tests/cases/conformance/salsa/second.js(2,9): error TS2339: Property 'formatters' does not exist on type 'typeof import("tests/cases/conformance/salsa/second")'.


==== tests/cases/conformance/salsa/mod.js (0 errors) ====
    // Based on a pattern from adonis
    exports.formatters = {}
==== tests/cases/conformance/salsa/first.js (1 errors) ====
    exports = require('./mod')
    exports.formatters.j = function (v) {
            ~~~~~~~~~~
!!! error TS2339: Property 'formatters' does not exist on type 'typeof import("tests/cases/conformance/salsa/first")'.
        return v
    }
==== tests/cases/conformance/salsa/second.js (1 errors) ====
    exports = require('./mod')
    exports.formatters.o = function (v) {
            ~~~~~~~~~~
!!! error TS2339: Property 'formatters' does not exist on type 'typeof import("tests/cases/conformance/salsa/second")'.
        return v
    }
    
==== tests/cases/conformance/salsa/use.js (0 errors) ====
    import * as debug from './mod'
    
    debug.formatters.j
    var one = debug.formatters.o(1)
    